WIP- made a few changes

--- a/guestBook/guestbook.html
+++ b/guestBook/guestbook.html
@@ -41,6 +41,6 @@
       <div id="users-information" method="post"> <!--Here will the users information show up--> </div> 
     <!--Guestbook JavaScript-->
    
-   <script src="script.js"></script>
+   <script src="server.js"></script>
   </body>
 </html>
