WIP- made few changes again

--- a/guestBook/guestbook.html
+++ b/guestBook/guestbook.html
@@ -18,7 +18,7 @@
     
     <!--Guestbook form-->
     <div class="form-style">
-      <form action="/submit-form" method="post">
+      <form action="submit-form" method="post">
         <label for="namn">Namn:</label>
         <input type="text" id="namn" name="namn" /> <br />
 
@@ -35,12 +35,11 @@
         <textarea name="message" id="message"></textarea> <br>
 
         <button type="submit">Lägg till</button>
-      </form>
-    </div>     
+      </form> 
+    </div>
+  
+     <div id="users-information">
+<!--Here will the users information show up--> </div> 
 
-      <div id="users-information" method="post"> <!--Here will the users information show up--> </div> 
-    <!--Guestbook JavaScript-->
-   
-   <script src="server.js"></script>
   </body>
 </html>
