restructuing html and styles

--- a/guestbook.html
+++ b/guestbook.html
@@ -18,18 +18,13 @@
     
     <!--Guestbook form-->
     <div class="form-style">
-      <form action="submit-form" method="post">
+      <form action="submit-guestbook-form" method="post">
         <label for="namn">Namn:</label>
-        <input type="text" id="namn" name="namn" /> <br />
+        <input type="text" id="name" name="namn" /> <br />
 
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" /> <br />
 
-        <label for="homepage">Homepage:</label>
-        <input type="text" id="homepage" name="homepage" /> <br />
-
-        <label for="tel">Tel:</label>
-        <input type="text" id="tel" name="tel" /> <br />
         <!--Button input-->
         <label for="message">Kommentar:</label> <br>
         <textarea name="message" id="message"></textarea> <br>
@@ -37,9 +32,9 @@
         <button type="submit">Lägg till</button>
       </form> 
     </div>
-  
+    <br />
      <div id="users-information">
-<!--Here will the users information show up--> </div> 
-
+     <!-- NODEJS-DATA-->
+    </div> 
   </body>
 </html>
